--- a/css/style.css
+++ b/css/style.css
@@ -51,4 +51,17 @@ body,
   right: 0;
   left: auto; }
 
+.imgmodal {
+  height: 120px;
+  width: 120px;
+  object-fit: cover !important; }
+
+.imgperfil {
+  height: 40px;
+  width: 40px;
+  object-fit: cover !important; }
+
+.error {
+  color: #FF0000; }
+
 /*# sourceMappingURL=style.css.map */
